changed spinner background color

--- a/brickanoid.kv
+++ b/brickanoid.kv
@@ -316,6 +316,7 @@
                 on_press: root.manager.get_screen('game').ids['brickanoid_game'].to_restart()
             Spinner:
                 size_hint_x: 0.3
+                background_color: 1, 1, 0.7
                 id: level_spinner_menu_act
                 text: '1'
                 values: '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17'
